[gd_scene load_steps=12 format=2]

[ext_resource path="res://projectile/EnemyProjectile.gd" type="Script" id=1]
[ext_resource path="res://projectile/Explosion.png" type="Texture" id=2]
[ext_resource path="res://projectile/Canonball.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 143, 100 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 143, 0, 143, 100 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 286, 0, 143, 100 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 429, 0, 143, 100 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 572, 0, 143, 100 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 715, 0, 143, 100 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "explosion",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 46.125, 49.25 )

[node name="EnemyProjectile" type="Area2D" groups=["EnemieProjectile"]]
scale = Vector2( 0.1, 0.1 )
script = ExtResource( 1 )

[node name="explosion" type="AnimatedSprite" parent="."]
position = Vector2( 22.5, 14.5 )
scale = Vector2( 1.48951, 1.83 )
frames = SubResource( 7 )
animation = "explosion"

[node name="cannonBallTexture" type="Sprite" parent="."]
position = Vector2( 5, 7.00006 )
scale = Vector2( 0.15875, 0.18125 )
texture = ExtResource( 3 )

[node name="Enemies" type="CollisionShape2D" parent="."]
position = Vector2( 2, 5 )
shape = SubResource( 8 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 3, 7 )
scale = Vector2( 8.425, 7.0125 )

[connection signal="area_entered" from="." to="." method="_on_EnemyProjectile_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_EnemyProjectile_body_entered"]
[connection signal="animation_finished" from="explosion" to="." method="_on_explosion_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
